--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ v = {editable = true,version = "*"}
 tensorflow = "==1.12.2"
 nni = "==0.9.1.1"
 configargparse = "==0.14.0"
+flask = "*"
 
 [requires]
 python_version = "3.6"
