--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,8 @@ v = {editable = true,version = "*"}
 tensorflow     = "==1.12.2"
 nni            = "==0.9.1.1"
 configargparse = "==0.14.0"
-flask          = "==1.1.1"
+flask          = "==1.0.2"
+gunicorn       = "==19.9.0"
 
 [requires]
 python_version = "3.6.9"
