--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 ConfigArgParse==0.14.0
-json-include==0.1.1
+#json-include==0.1.1
 nni==0.9.1.1
-numpy==1.15.1
-scikit-learn==0.20.1
+#numpy==1.15.1
+#scikit-learn==0.20.1
 tensorflow==1.12.0
-tensorflowjs==0.8.0
+#tensorflowjs==0.8.0
+flask==1.0.2
+gunicorn==19.9.0
